<resources>
    <string name="app_name">z-lp</string>
    <string name="app_name_caps">LIVE PLAY</string>

    <string name="notice">Notice</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ad">Advertisement</string>
    <string name="search">search</string>
    <string name="detail">Detail</string>
    <string name="pass">Pass</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="create_account">Create an account?</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_different">password different</string>
    <string name="username_empty">username input empty</string>
    <string name="password_empty">password input empty</string>
    <string name="email_empty">email input empty</string>
    <string name="register_fail">Register fail , please try again</string>
    <string name="login_fail">Login fail , please check user information and try again</string>
    <string name="network_error">Network connect error , please check </string>
    <string name="copyright">All resources are from internet, for educational purpose only</string>
    <string name="live">Live</string>
    <string name="news">News</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="radios">Radios</string>
    <string name="my">My</string>
    <string name="my_channel">My Channel</string>
    <string name="account_settings">Account Settings</string>
    <string name="favorite">Favorite</string>
    <string name="add_favorite"> add to favorite</string>
    <string name="remove_favorite"> remove from favorite</string>
    <string name="device_notice">The device is not supported!</string>
    <string name="exit_notice">Press back again to exit program</string>
    <string name="error_play">Channel error, please try again later!</string>
    <string name="update_notice">Update Notice</string>
    <string name="login_info">Account login on other device,please login again</string>
    <string name="app_no_install">Selected app not installed, please go to app market to download and install</string>
    <string name="confirm_exit">Do you confirm exit?</string>
    <string name="data_loading">data loading... :)</string>
    <string name="data_load_error">data load error :(</string>
    <string name="favorite_empty">favorite is empty</string>
    <string name="hi">Hi</string>
    <string name="playing">Now playing</string>
    <string name="notice1">Please go to app market to download and install</string>
    <string name="back">Press back exit</string>
    <string name="skip_ad">ACTIVE LD MEMBER, SKIP ADS </string>
    <string name="skip_ad1">JOIN LD GOLD TO SKIP ALL ADS </string>
    <string name="skip">SKIP</string>
</resources>
