<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/notice"
        android:textSize="22sp"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_marginTop="10dp"
        android:text="@string/login_info"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/bt_confirm"
        android:text="@string/confirm"
        android:textColor="@drawable/text_login"
        android:textAllCaps="false"
        android:background="@drawable/bt_login_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
