<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:background="@drawable/bg_dialog_exit"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:text="@string/notice"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/confirm_exit"
        android:textSize="27sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_confirm"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@drawable/bg_button"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_button"
            android:id="@+id/bt_cancel"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
