<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="onEvent"
            type="com.wiatec.bplay.activity.RegisterActivity.OnEventListener"/>
    </data>

    <LinearLayout
        android:background="@color/colorMain"
        android:padding="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:background="@color/colorGray"
            android:id="@+id/et_username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:background="@color/colorGray"
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:background="@color/colorGray"
            android:id="@+id/et_password1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/et_email"
            android:background="@color/colorGray"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/bt_register"
            android:text="@string/register"
            android:onClick="@{(view) -> onEvent.onClick(view) }"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>