<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content">


    <TextView
        android:text="@string/update_notice"
        android:textSize="22sp"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_marginTop="5dp"
        android:text="@string/update_notice"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_confirm"
            android:text="@string/confirm"
            android:textColor="@drawable/text_login"
            android:textAllCaps="false"
            android:background="@drawable/bt_login_bg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            android:textColor="@drawable/text_logout"
            android:textAllCaps="false"
            android:background="@drawable/bt_logout_bg"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
