<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="onEvent"
            type="com.wiatec.bplay.activity.LoginActivity.OnEventListener" />
    </data>

    <RelativeLayout
        android:background="@color/colorMain"
        android:padding="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/iv_logo"
            android:src="@mipmap/bplay_logo"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <EditText
            android:layout_below="@id/iv_logo"
            android:id="@+id/et_username"
            android:background="@color/colorGray"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        
        <android.support.v4.widget.Space
            android:id="@+id/s1"
            android:layout_below="@id/et_username"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_below="@id/s1"
            android:hint="@string/password"
            android:background="@color/colorGray"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <android.support.v4.widget.Space
            android:id="@+id/s2"
            android:layout_below="@id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        
        <Button
            android:id="@+id/bt_login"
            android:layout_below="@id/s2"
            android:text="@string/login"
            android:textSize="20sp"
            android:onClick="@{(view) -> onEvent.onClick(view)}"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:id="@+id/progressBar" />

        <Button
            android:layout_alignParentBottom="true"
            android:layout_below="@id/bt_login"
            android:id="@+id/bt_register"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:onClick="@{(view) -> onEvent.onClick(view)}"
            android:textAllCaps="false"
            android:background="@color/colorTranslucent"
            android:textColor="@drawable/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</layout>